--- a/builds/development/json-dev1/index.html
+++ b/builds/development/json-dev1/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 	<title>Clock Periodical</title>
 	  <link rel="stylesheet" href="css/styles.css">
-	
+
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
 </head>
 <body>
@@ -19,15 +19,15 @@
 </div>
 
 <!-- BG fade here -->
-<img src="images/numbers/bg4-320x568.png" id="myBg1">
+<!-- <img src="images/numbers/bg4-320x568.png" id="myBg1"> -->
 <!-- DOM placeholder -->
 <div id="myClockOne"></div>
 
 	<script src="js/jquery-1.8.3.min.js"></script>
-	
+
 	<script src="js/clock-object.js"></script>
-	
+
 	<script src="js/myscript.js"></script>
-	
+
 </body>
 </html>
